Descripción breve de los cambios (ej: Fix CSS minification error)

--- a/src/components/header-footer/1-Header.astro
+++ b/src/components/header-footer/1-Header.astro
@@ -4,7 +4,7 @@
         <a href="/" aria-label="Ir a página de inicio">
             <div class="w-16 h-16 lg:w-20 lg:h-20 overflow-visible">
                 <img 
-                    src="public/img/LogoNegro.webp" 
+                    src="/src/assets/img/LogoNegro.webp" 
                     alt="Logo de la empresa - Maquillaje profesional" 
                     width="80" 
                     height="80"
