--- a/src/components/escuela/curso.astro
+++ b/src/components/escuela/curso.astro
@@ -8,7 +8,7 @@
             <div class="grid grid-cols-1 gap-6 sm:gap-8 md:gap-10 lg:grid-cols-2 lg:items-center lg:gap-12">
                 <!-- Imagen -->
                 <div class="lg:order-1">
-                    <img src="/src/assets/img/Aerografia.webp" alt="Curso de Maquillaje con Aerografía" class="w-full h-auto rounded-lg shadow-lg">
+                    <img src="/Aerografia.webp" alt="Curso de Maquillaje con Aerografía" class="w-full h-auto rounded-lg shadow-lg">
                 </div>
         
                 <!-- Contenido -->
@@ -151,7 +151,7 @@
             <div class="grid grid-cols-1 gap-6 sm:gap-8 md:gap-10 lg:grid-cols-2 lg:items-center lg:gap-12">
                 <!-- Imagen -->
                 <div>
-                    <img src="/src/assets/img/Fantasia.webp" alt="Curso de Maquillaje de Fantasía" class="w-full h-auto rounded-lg shadow-lg">
+                    <img src="/Fantasia.webp" alt="Curso de Maquillaje de Fantasía" class="w-full h-auto rounded-lg shadow-lg">
                 </div>
         
                 <!-- Contenido -->
@@ -299,7 +299,7 @@
             <div class="grid grid-cols-1 gap-6 sm:gap-8 md:gap-10 lg:grid-cols-2 lg:items-center lg:gap-12">
                 <!-- Imagen -->
                 <div class="lg:order-1">
-                    <img src="/src/assets/img/PProfesionales.webp" alt="Curso de Peinados Profesionales" class="w-full h-auto rounded-lg shadow-lg">
+                    <img src="/PProfesionales.webp" alt="Curso de Peinados Profesionales" class="w-full h-auto rounded-lg shadow-lg">
                 </div>
         
                 <!-- Contenido -->
