--- a/src/components/header-footer/1-Header.astro
+++ b/src/components/header-footer/1-Header.astro
@@ -4,7 +4,7 @@
         <a href="/" aria-label="Ir a página de inicio">
             <div class="w-16 h-16 lg:w-20 lg:h-20 overflow-visible">
                 <img 
-                    src="/src/assets/img/LogoNegro.webp" 
+                    src="/LogoNegro.webp" 
                     alt="Logo de la empresa - Maquillaje profesional" 
                     width="80" 
                     height="80"
@@ -24,7 +24,7 @@
                     <summary class="hover:bg-[#FFB4A2] hover:shadow-sm hover:text-white hover:font-semibold rounded-lg px-3 py-2 text-lg lg:text-xl" aria-haspopup="true" aria-expanded="false">Maquillajes</summary>
                     <ul class="absolute left-0 p-2 rounded-lg whitespace-nowrap min-w-max shadow-black/60 shadow-lg bg-white text-sm" role="menu">
                         <li><a href="/MSocial" class="hover:bg-[#FFB4A2] px-4 py-2 w-full text-left" role="menuitem">Maquillaje Social</a></li>
-                        <li><a href="/MQuinceañeras" class="hover:bg-[#FFB4A2] px-4 py-2 w-full text-left" role="menuitem">Maquillaje para Quinceañeras</a></li>
+                        <li><a href="/MQuince" class="hover:bg-[#FFB4A2] px-4 py-2 w-full text-left" role="menuitem">Maquillaje para Quinceañeras</a></li>
                         <li><a href="/MNovias" class="hover:bg-[#FFB4A2] px-4 py-2 w-full text-left" role="menuitem">Maquillaje para Novias</a></li>
                     </ul>
                 </details>
@@ -52,13 +52,13 @@
                         <summary class="hover:bg-[#FFB4A2] px-4 py-2 text-black" aria-haspopup="true" aria-expanded="false">Maquillajes</summary>
                         <ul class="p-2 bg-white" role="menu">
                             <li><a href="/MSocial" class="hover:bg-[#FFB4A2] px-4 py-2 text-black" role="menuitem">Maquillaje Social</a></li>
-                            <li><a href="/MQuinceañeras" class="hover:bg-[#FFB4A2] px-4 py-2 text-black" role="menuitem">Maquillaje para Quinceañeras</a></li>
+                            <li><a href="/MQuince" class="hover:bg-[#FFB4A2] px-4 py-2 text-black" role="menuitem">Maquillaje para Quinceañeras</a></li>
                             <li><a href="/MNovias" class="hover:bg-[#FFB4A2] px-4 py-2 text-black" role="menuitem">Maquillaje para Novias</a></li>
                         </ul>
                     </details>
                 </li>
                 <li><a href="/HPeinados" class="hover:bg-[#FFB4A2] px-4 py-2 text-black" role="menuitem">Peinados</a></li>
-                <li><a href="/HEscuela" class="hover:bg-[#FFB4A2] px-4 py-2 text-black" role="menuitem">Escuela de Maquillaje</a></li>
+                <li><a href="/HEscuela" class="hover:bg-[#FFB4A2] px-4 py-2 text-black" role="menuitem">Escuela de Alma</a></li>
                 <li><a href="/HNosotros" class="hover:bg-[#FFB4A2] px-4 py-2 text-black" role="menuitem">Sobre Nosotros</a></li>
                 <li><a href="#contacto" class="hover:bg-[#FFB4A2] px-4 py-2 text-black" role="menuitem">Contacto</a></li>
             </ul>
