--- a/src/components/header-footer/5-Footer.astro
+++ b/src/components/header-footer/5-Footer.astro
@@ -5,7 +5,7 @@
       <!-- Columna 1: Logo y Redes -->
       <div class="flex flex-col flex-1/4 items-center justify-center">
         <img 
-          src="/src/assets/img/LBlanco.png" 
+          src="/LBlanco.png" 
           alt="Logo de Alma Makeup - Estudio profesional de maquillaje y belleza" 
           class="w-50 h-auto"
           itemprop="logo"
