--- a/src/components/index/4-Galeria.astro
+++ b/src/components/index/4-Galeria.astro
@@ -18,56 +18,56 @@
             <div class="carousel rounded-box w-full">
                 <div class="carousel-item h-80 w-60">
                     <img
-                        src="/src/assets/img/Galeria8.jpg"
+                        src="/Galeria8.jpg"
                         alt="Maquillaje profesional"
                         class="object-top"
                     />
                 </div>
                 <div class="carousel-item h-80 w-auto">
                     <img
-                        src="/src/assets/img/Galeria3.jpg"
+                        src="/Galeria3.jpg"
                         alt="Peinado elegante"
                         class="object-top"
                     />
                 </div>
                 <div class="carousel-item h-80 w-auto">
                     <img
-                        src="/src/assets/img/Galeria2.jpg"
+                        src="/Galeria2.jpg"
                         alt="Maquillaje de novia"
                         class="w-full h-full object-cover object-top"
                     />
                 </div>
                 <div class="carousel-item h-80 w-auto">
                     <img
-                        src="/src/assets/img/Galeria4.jpg"
+                        src="/Galeria4.jpg"
                         alt="Estilismo profesional"
                         class="w-full h-full object-cover object-center"
                     />
                 </div>
                 <div class="carousel-item h-80 w-auto">
                     <img
-                        src="/src/assets/img/Galeria5.jpg"
+                        src="/Galeria5.jpg"
                         alt="Transformación de belleza"
                         class="w-full h-full object-center"
                     />
                 </div>
                 <div class="carousel-item h-80 w-auto">
                     <img
-                        src="/src/assets/img/Galeria6.jpg"
+                        src="/Galeria6.jpg"
                         alt="Peinado para evento"
                         class="object-top object-cover"
                     />
                 </div>
                 <div class="carousel-item h-80 w-auto">
                     <img
-                        src="/src/assets/img/Galeria7.jpg"
+                        src="/Galeria7.jpg"
                         alt="Maquillaje artístico"
                         class="w-full h-full object-contain object-top"
                     />
                 </div>
                 <div class="carousel-item h-80 w-auto">
                     <img
-                        src="/src/assets/img/Galeria1.jpg"
+                        src="/Galeria1.jpg"
                         alt="Maquillaje artístico"
                         class="w-full h-full object-contain object-top"
                     />
