--- a/src/pages/MQuince.astro
+++ b/src/pages/MQuince.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Header from '../components/header-footer/1-Header.astro';
-import Quinceañeras from "../components/maquillajes/Quinceañeras.astro";
+import Quince from "../components/maquillajes/Quince.astro";
 import Footer from '../components/header-footer/5-Footer.astro';
 import "../styles/global.css";
 
@@ -13,7 +13,7 @@ import "../styles/global.css";
 	</header>
     <main>
 		<section>
-			<Quinceañeras />
+			<Quince />
 		</section>
 	</main>
     <footer id="contacto">
