--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="es"> <!-- Cambiado a "es" para sitios en español -->
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
+		<!-- Meta viewport mejorado -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<link
 			rel="stylesheet"
@@ -10,7 +11,9 @@
 		/>
 		<meta name="generator" content={Astro.generator} />
 		<title>AlmaStudio</title>
-		
+		<!-- Meta adicional recomendado para Apple -->
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 	</head>
 	<body class="font-Montserrat">
 		<slot />
